# nexrad

./: .envrc  .gitignore  AGENTS.md  LICENSE  README.md  nexrad-pointcloud-v1.dot  nexrad-verify-only.dot  nexrad.dot  pyproject.toml  run-cli.yaml  run.yaml
.agents/skills/create-dotfile/: SKILL.md
.ai/runs/01KKW5V0VN00K8QS3JQVHT7ZVJ/: plan_a.md  plan_final.md
.ai/runs/01KKWAPZAZJGA3854C75V7D87B/: spec.md
.ai/runs/01KKXZXYZP498PFHF7C7N3Q8Z2/: plan_final.md  review_consensus.md
.ai/runs/01KM0HG2F6DJN6PHTYXA0XSAX7/: plan_final.md  review_consensus.md
docs/: NEXRAD_TEST_CASES.md  index.html
docs/plans/: 2026-03-15-nexrad-pointcloud-v1-design.md  2026-03-15-nexrad-pointcloud-v1-dod.md
docs/specs/: NEXRAD-Level-II-ICD.md  NWS_REFLECTIVITY_COLOR_TABLE.md  PLY_FORMAT_SPECIFICATION.md  PYART_API_REFERENCE.md
scripts/: validate-artifacts.sh  validate-build.sh  validate-fmt.sh  validate-test.sh
src/nexrad_fetch/: __init__.py  cli.py  fetch.py
src/nexrad_transform/: __init__.py  cli.py  colors.py  ply_writer.py  transform.py
tests/: test_fetch.py  test_transform.py
viewer/: index.html  package-lock.json  package.json
viewer/src/: main.js
